<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Finance Tracker</string>
    <string name="app_full_name">Finance Tracker</string>

    <string name="nav_main">Tracker</string>
    <string name="nav_detail">Detail</string>
    <string name="opt_settings">Settings</string>
    <string name="opt_about">About</string>

    <string name="toolbar_main">Main</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_about">About</string>
    <string name="toolbar_templates">Templates</string>
    <string name="toolbar_template_creator">Template</string>
    <string name="toolbar_wallet">Wallet</string>
    <string name="toolbar_operation">Operation</string>
    <string name="toolbar_wallet_report">Report</string>

    <string name="content_unavailable">Content is temporarily unavailable</string>"

    <!--SettingFragment-->
    <string name="settings_currency">Currency</string>

    <!--MainView-->
    <string name="dollar_sign" tools:ignore="MissingTranslation">$</string>
    <string name="ruble_sign" tools:ignore="MissingTranslation">Р</string>
    <string name="balance">Balance:</string>
    <string name="currency">Currency:</string>
    <string name="usd" tools:ignore="MissingTranslation">USD</string>
    <string name="eur" tools:ignore="MissingTranslation">EUR</string>
    <string name="rub" tools:ignore="MissingTranslation">RUB</string>
    <string name="title_main">Main</string>
    <string name="title_operations">Expenses</string>
    <string name="hint_operation_sum">Sum:</string>
    <string name="hint_operation_category">Input new category</string>
    <string name="add_new_wallet">Add new wallet</string>

    <!--Add OperationEntity-->
    <string name="minus_sum">Spent</string>
    <string name="plus_sum">Earn</string>
    <string name="period_checkbox">Period operation</string>
    <string name="period_title">Days count</string>
    <string-array name="default_categories">
        <item>Food</item>
        <item>Utility payments</item>
        <item>Clothes</item>
        <item>Other</item>
    </string-array>
    <string name="created_op">Operation is added</string>
    <string name="add_op">Operation</string>
    <string name="add_operation_category_label">Category</string>
    <string name="operation_error_empty_sum">You must enter the sum</string>
    <string name="operation_date_label">Operation date</string>
    <string name="dialog_select_date">Select the date</string>
    <string name="select_template">Select template</string>

    <!-- Wallet -->
    <string name="wallet_change">Change wallet</string>
    <string name="wallet_create_operation">Add operation</string>
    <string name="wallet_remove_wallet">Remove wallet</string>
    <string name="wallet_remove_wallet_success_toast">Your wallet was removed</string>
    <string name="wallet_change_wallet_success_toast">Your wallet was changed</string>
    <string name="dialog_operation_remove_title">Deleting operations</string>
    <string name="dialog_operation_remove_message">Are you sure you want to delete this operation?</string>
    <string name="operation_deleted">Operation deleted</string>

    <!-- Wallet dialog creator -->
    <string name="wallet_removing_title">Wallet removing</string>
    <string name="wallet_removing_message">Are you sure you want to remove this wallet?</string>

    <!-- Wallet dialog creator -->
    <string name="wallet_create_dialog_title_create">Create</string>
    <string name="wallet_create_dialog_title_change">Change</string>
    <string name="wallet_create_dialog_name_hint">Wallet name</string>
    <string name="wallet_create_dialog_name_error">You must enter the name of the wallet</string>

    <!-- Шаблоны -->
    <string name="template_list_add">Create template</string>
    <string name="template_creator_title_hint">Title</string>
    <string name="template_creator_name_error">You must enter the name of the title</string>
    <string name="template_creator_insert_success">Template successfully created</string>
    <string name="template_creator_update_success">Template updated</string>
    <string name="template_creator_remove_success">Template deleted</string>

    <!-- Template report -->
    <string name="template_report_date_from">From</string>
    <string name="template_report_date_to">To</string>
    <string name="template_report_error_to_less_from">End date can not be less than start date</string>
    <string name="template_report_error_from_more_to">Start date can not be longer than end date</string>
    <string name="template_report_no_data">No data for report</string>
    <string name="template_report_text_balance">Balance:</string>
    <string name="template_report_text_total_count">Всего операций:</string>
    <string name="template_report_text_cost_count">Total Operations:</string>
    <string name="template_report_text_income_count">Number of incomes:</string>
    <string name="template_report_text_income">Earned:</string>
    <string name="template_report_text_cost">Spent:</string>

    <string name="empty_field_error">You must fill in the field</string>
    <string name="templates">Templates</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="template_picker_dialog_title">Select a template</string>
    
</resources>
