<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fragment_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragment_margin"
            android:layout_marginBottom="@dimen/fragment_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_sum"
                android:textColor="@color/primary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_money_size"
                android:hint="@string/hint_operation_sum"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:layout_margin="@dimen/fragment_margin"
            android:outlineSpotShadowColor="@color/accent"
            android:outlineAmbientShadowColor="@color/extra_blue"
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/category_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_margin"
        android:visibility="gone">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_category"
            android:textColor="@color/primary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/card_money_size"
            android:hint="@string/hint_operation_category"
            android:inputType="textAutoCorrect|textCapSentences"
            android:maxLines="1"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/big_margin">
        <Button
            android:id="@+id/button_plus_sum"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/plus_sum"
            android:padding="@dimen/big_padding"
            android:textSize="@dimen/card_text_size"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.Button.Colored"
            />
        <Button
            android:id="@+id/button_minus_sum"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/minus_sum"
            android:padding="@dimen/big_padding"
            android:textSize="@dimen/card_text_size"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.Button.Colored"
            />
    </LinearLayout>


</LinearLayout>